# multigrid

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: CMakeLists.txt  macro_pick_up_benchmark.cmake
common/: laplace_operator.h  laplace_operator_dg.h  laplace_operator_dg_face.h  matrix_vector_kernel.h  multigrid_solver.h  multigrid_solver_dg.h  multigrid_solver_dg_plain.h  renumber_dofs_for_mf.h  vector_access_reduced.h
gpu/: minimal_surface.cu  poisson_cube.cu  poisson_l.cu  poisson_shell.cu
matvec_dg/: program.cc
matvec_dg_cheby/: program.cc
minimal_surface/: program.cc
poisson_cube/: program.cc
poisson_dg/: program.cc
poisson_dg_plain/: program.cc
poisson_l/: CMakeLists.txt  program.cc
poisson_shell/: program.cc
solver_dg/: CMakeLists.txt  program.cc
